--- a/Assignment/13TrendMedia/13TrendMedia/Resource/Storyboards/Trend.storyboard
+++ b/Assignment/13TrendMedia/13TrendMedia/Resource/Storyboards/Trend.storyboard
@@ -8,6 +8,121 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Box Office View Controller-->
+        <scene sceneID="8D8-Jt-LiI">
+            <objects>
+                <viewController storyboardIdentifier="BoxOfficeViewController" id="whg-ws-JTR" customClass="BoxOfficeViewController" customModule="_3TrendMedia" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lsD-nn-oWw">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bmP-2g-5Pz">
+                                <rect key="frame" x="20" y="64" width="300" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sDE-aV-qx5">
+                                <rect key="frame" x="328" y="59" width="66" height="44"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="sDE-aV-qx5" secondAttribute="height" multiplier="3:2" id="DQX-r3-7uq"/>
+                                    <constraint firstAttribute="height" constant="44" id="QXk-cb-G5O"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
+                                <state key="normal" title="검색">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yxY-3o-Qn5">
+                                <rect key="frame" x="0.0" y="118" width="414" height="744"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="BoxOfficeTableViewCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BoxOfficeTableViewCell" rowHeight="78" id="iMn-ZS-VcF" customClass="BoxOfficeTableViewCell" customModule="_3TrendMedia" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="78"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="iMn-ZS-VcF" id="mjP-Em-RkM">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="78"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2021-10-26" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k4Q-jN-koh">
+                                                    <rect key="frame" x="314" y="30.5" width="80" height="17"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="80" id="9Uh-x3-0vw"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" systemColor="systemGrayColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K4M-wu-qd3">
+                                                    <rect key="frame" x="20" y="28.5" width="44" height="21"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cZC-x7-7ok">
+                                                            <rect key="frame" x="0.0" y="0.0" width="44" height="21"/>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="labelColor"/>
+                                                    <constraints>
+                                                        <constraint firstItem="cZC-x7-7ok" firstAttribute="leading" secondItem="K4M-wu-qd3" secondAttribute="leading" id="4oW-Zz-Qyf"/>
+                                                        <constraint firstAttribute="width" constant="44" id="L6f-PT-AIP"/>
+                                                        <constraint firstAttribute="bottom" secondItem="cZC-x7-7ok" secondAttribute="bottom" id="UQv-2p-ZZo"/>
+                                                        <constraint firstAttribute="trailing" secondItem="cZC-x7-7ok" secondAttribute="trailing" id="j4q-qg-A00"/>
+                                                        <constraint firstItem="cZC-x7-7ok" firstAttribute="top" secondItem="K4M-wu-qd3" secondAttribute="top" id="zwf-uZ-jM3"/>
+                                                    </constraints>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YbR-TC-Sfl">
+                                                    <rect key="frame" x="72" y="28.5" width="41.5" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="YbR-TC-Sfl" firstAttribute="centerY" secondItem="cZC-x7-7ok" secondAttribute="centerY" id="0vq-8a-YHe"/>
+                                                <constraint firstItem="YbR-TC-Sfl" firstAttribute="leading" secondItem="K4M-wu-qd3" secondAttribute="trailing" constant="8" id="Hq1-ML-SrI"/>
+                                                <constraint firstItem="K4M-wu-qd3" firstAttribute="centerY" secondItem="mjP-Em-RkM" secondAttribute="centerY" id="a0m-gr-lQH"/>
+                                                <constraint firstItem="K4M-wu-qd3" firstAttribute="leading" secondItem="mjP-Em-RkM" secondAttribute="leading" constant="20" id="orA-eM-ssa"/>
+                                                <constraint firstAttribute="trailing" secondItem="k4Q-jN-koh" secondAttribute="trailing" constant="20" id="pZ1-cK-31N"/>
+                                                <constraint firstItem="k4Q-jN-koh" firstAttribute="centerY" secondItem="YbR-TC-Sfl" secondAttribute="centerY" id="xhk-Om-9Mw"/>
+                                                <constraint firstItem="k4Q-jN-koh" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="YbR-TC-Sfl" secondAttribute="trailing" constant="8" id="yTn-X7-VtK"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="dateLabel" destination="k4Q-jN-koh" id="KmX-Vt-CAN"/>
+                                            <outlet property="rankLabel" destination="cZC-x7-7ok" id="zLr-K0-Jju"/>
+                                            <outlet property="titleLabel" destination="YbR-TC-Sfl" id="WWA-2r-914"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="SUg-LK-SB0"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="yxY-3o-Qn5" firstAttribute="top" secondItem="bmP-2g-5Pz" secondAttribute="bottom" constant="20" id="1OA-TU-0Ek"/>
+                            <constraint firstItem="yxY-3o-Qn5" firstAttribute="leading" secondItem="SUg-LK-SB0" secondAttribute="leading" id="9s1-FI-XLI"/>
+                            <constraint firstItem="SUg-LK-SB0" firstAttribute="trailing" secondItem="sDE-aV-qx5" secondAttribute="trailing" constant="20" id="AZw-aw-h9s"/>
+                            <constraint firstItem="SUg-LK-SB0" firstAttribute="trailing" secondItem="yxY-3o-Qn5" secondAttribute="trailing" id="Bji-cL-Jdx"/>
+                            <constraint firstItem="bmP-2g-5Pz" firstAttribute="leading" secondItem="SUg-LK-SB0" secondAttribute="leading" constant="20" id="Tlr-Oi-XcO"/>
+                            <constraint firstItem="SUg-LK-SB0" firstAttribute="bottom" secondItem="yxY-3o-Qn5" secondAttribute="bottom" id="UnZ-hv-XKK"/>
+                            <constraint firstItem="bmP-2g-5Pz" firstAttribute="leading" secondItem="SUg-LK-SB0" secondAttribute="leading" constant="20" id="ZRT-fQ-O6z"/>
+                            <constraint firstItem="sDE-aV-qx5" firstAttribute="centerY" secondItem="bmP-2g-5Pz" secondAttribute="centerY" id="aQ0-uh-gNH"/>
+                            <constraint firstItem="bmP-2g-5Pz" firstAttribute="top" secondItem="SUg-LK-SB0" secondAttribute="top" constant="20" id="l0v-pc-HDe"/>
+                            <constraint firstItem="sDE-aV-qx5" firstAttribute="leading" secondItem="bmP-2g-5Pz" secondAttribute="trailing" constant="8" id="uds-yl-ofR"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="EpT-Sz-Bdv"/>
+                    <connections>
+                        <outlet property="dateTextField" destination="bmP-2g-5Pz" id="88h-5o-K7X"/>
+                        <outlet property="tableView" destination="yxY-3o-Qn5" id="kzg-qu-kXR"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="23y-gU-SVm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1114.4927536231885" y="-653.57142857142856"/>
+        </scene>
         <!--TREND MEDIA-->
         <scene sceneID="HAe-ih-y4s">
             <objects>
@@ -29,6 +144,9 @@
                                                 <state key="normal" title="FILM">
                                                     <color key="titleColor" systemColor="systemGreenColor"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="filmButtonClicked:" destination="efg-Vw-qt2" eventType="touchUpInside" id="T7M-Xn-gTH"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8lv-O0-BLw">
                                                 <rect key="frame" x="118" y="0.0" width="118" height="118"/>
@@ -159,11 +277,17 @@
         <image name="list.dash" catalog="system" width="128" height="85"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="mappin.and.ellipse" catalog="system" width="118" height="128"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBlueColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
