--- a/Exercise/SeSAC_05Week/SeSAC_05Week/Base.lproj/Main.storyboard
+++ b/Exercise/SeSAC_05Week/SeSAC_05Week/Base.lproj/Main.storyboard
@@ -172,8 +172,49 @@
             </objects>
             <point key="canvasLocation" x="969.56521739130437" y="47.544642857142854"/>
         </scene>
+        <!--Vision View Controller-->
+        <scene sceneID="CwC-I6-Nr3">
+            <objects>
+                <viewController storyboardIdentifier="VisionViewController" id="gEs-ct-i1c" customClass="VisionViewController" customModule="SeSAC_05Week" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="uBW-So-eCE">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="IMG_5086.JPG" translatesAutoresizingMaskIntoConstraints="NO" id="9GS-DY-4rv">
+                                <rect key="frame" x="61" y="128" width="292" height="400"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yfx-0X-hqj">
+                                <rect key="frame" x="55" y="692" width="305" height="84"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Slo-T6-R27">
+                                <rect key="frame" x="113" y="574" width="189" height="61"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="requestButtonClicked:" destination="gEs-ct-i1c" eventType="touchUpInside" id="eR2-yf-c8O"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Ae8-E9-Nsb"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <connections>
+                        <outlet property="posterImageView" destination="9GS-DY-4rv" id="zY8-aU-hNr"/>
+                        <outlet property="resultLabel" destination="Yfx-0X-hqj" id="S8H-eb-dsL"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RBu-rl-n5q" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1924.6376811594205" y="46.875"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="IMG_5086.JPG" width="1333" height="2000"/>
         <image name="arrow.clockwise" catalog="system" width="115" height="128"/>
         <image name="location.fill" catalog="system" width="128" height="121"/>
         <image name="square.and.arrow.up" catalog="system" width="115" height="128"/>
