--- a/Exercise/SeSAC_05Week/SeSAC_05Week/Base.lproj/Main.storyboard
+++ b/Exercise/SeSAC_05Week/SeSAC_05Week/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gEs-ct-i1c">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -197,6 +197,14 @@
                                 <state key="normal" title="Button"/>
                                 <connections>
                                     <action selector="requestButtonClicked:" destination="gEs-ct-i1c" eventType="touchUpInside" id="eR2-yf-c8O"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JKT-kk-Tgv">
+                                <rect key="frame" x="34" y="574" width="61" height="61"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="사진"/>
+                                <connections>
+                                    <action selector="photoLibraryButtonClicked:" destination="gEs-ct-i1c" eventType="touchUpInside" id="pEj-dm-58Y"/>
                                 </connections>
                             </button>
                         </subviews>
