--- a/Exercise/SeSAC_06Week/SeSAC_06Week/Resource/Storyboard/Base.lproj/Content.storyboard
+++ b/Exercise/SeSAC_06Week/SeSAC_06Week/Resource/Storyboard/Base.lproj/Content.storyboard
@@ -22,7 +22,7 @@
                                     <constraint firstAttribute="width" secondItem="Kk9-Ju-WWm" secondAttribute="height" multiplier="1:1" id="eFL-5r-UAG"/>
                                 </constraints>
                             </imageView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="제목을 입력해주세요" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nDc-73-pvh">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nDc-73-pvh">
                                 <rect key="frame" x="20" y="478" width="374" height="44"/>
                                 <color key="backgroundColor" systemColor="systemGray5Color"/>
                                 <constraints>
@@ -39,10 +39,9 @@
                                 </constraints>
                                 <state key="normal" title="Button"/>
                             </button>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="lWO-Wa-pR7">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="일기작성" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="lWO-Wa-pR7">
                                 <rect key="frame" x="20" y="606" width="374" height="212"/>
                                 <color key="backgroundColor" systemColor="systemGray5Color"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
