--- a/Exercise/SeSAC_06Week/SeSAC_06Week/Resource/Storyboard/Base.lproj/Setting.storyboard
+++ b/Exercise/SeSAC_06Week/SeSAC_06Week/Resource/Storyboard/Base.lproj/Setting.storyboard
@@ -18,7 +18,7 @@
                         <viewLayoutGuide key="safeArea" id="da9-D8-sv8"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Setting" image="person.crop.circle" catalog="system" id="gWk-C0-AHZ"/>
+                    <tabBarItem key="tabBarItem" title="Setting" image="gearshape" catalog="system" id="gWk-C0-AHZ"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hVl-6i-m53" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -27,7 +27,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="person.crop.circle" catalog="system" width="128" height="121"/>
+        <image name="gearshape" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
