--- a/Assignment/13TrendMedia/13TrendMedia/Resource/Storyboards/Trend.storyboard
+++ b/Assignment/13TrendMedia/13TrendMedia/Resource/Storyboards/Trend.storyboard
@@ -16,13 +16,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bmP-2g-5Pz">
-                                <rect key="frame" x="20" y="64" width="300" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="yyyyMMdd" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bmP-2g-5Pz">
+                                <rect key="frame" x="20" y="64" width="300" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="s9a-vl-bp9"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sDE-aV-qx5">
-                                <rect key="frame" x="328" y="59" width="66" height="44"/>
+                                <rect key="frame" x="328" y="67" width="66" height="44"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="sDE-aV-qx5" secondAttribute="height" multiplier="3:2" id="DQX-r3-7uq"/>
@@ -32,9 +35,12 @@
                                 <state key="normal" title="검색">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="searchButtonClicked:" destination="whg-ws-JTR" eventType="touchUpInside" id="c4V-L7-k7l"/>
+                                </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yxY-3o-Qn5">
-                                <rect key="frame" x="0.0" y="118" width="414" height="744"/>
+                                <rect key="frame" x="0.0" y="124" width="414" height="738"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="BoxOfficeTableViewCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BoxOfficeTableViewCell" rowHeight="78" id="iMn-ZS-VcF" customClass="BoxOfficeTableViewCell" customModule="_3TrendMedia" customModuleProvider="target">
@@ -101,7 +107,7 @@
                         <viewLayoutGuide key="safeArea" id="SUg-LK-SB0"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="yxY-3o-Qn5" firstAttribute="top" secondItem="bmP-2g-5Pz" secondAttribute="bottom" constant="20" id="1OA-TU-0Ek"/>
+                            <constraint firstItem="yxY-3o-Qn5" firstAttribute="top" secondItem="bmP-2g-5Pz" secondAttribute="bottom" constant="10" id="1OA-TU-0Ek"/>
                             <constraint firstItem="yxY-3o-Qn5" firstAttribute="leading" secondItem="SUg-LK-SB0" secondAttribute="leading" id="9s1-FI-XLI"/>
                             <constraint firstItem="SUg-LK-SB0" firstAttribute="trailing" secondItem="sDE-aV-qx5" secondAttribute="trailing" constant="20" id="AZw-aw-h9s"/>
                             <constraint firstItem="SUg-LK-SB0" firstAttribute="trailing" secondItem="yxY-3o-Qn5" secondAttribute="trailing" id="Bji-cL-Jdx"/>
